single (responsive) added + some fixes in index, js, css

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                     <div class="item group relative rounded-10 overflow-hidden">
                         <a href="#">
                             <img src="images/temp/wide-post1.png" alt="پست اول"
-                                class="duration-200 group-hover:brightness-50">
+                                class="w-full h-auto duration-200 group-hover:brightness-50">
                             <div
                                 class="content w-full absolute bottom-0 right-0 p-5 bg-gradient-to-t from-black to-transparent">
                                 <span
@@ -378,7 +378,7 @@
                     <div class="item group relative rounded-10 overflow-hidden">
                         <a href="#">
                             <img src="images/temp/wide-post2.png" alt="پست اول"
-                                class="duration-200 group-hover:brightness-50">
+                                class="w-full h-auto duration-200 group-hover:brightness-50">
                             <div
                                 class="content w-full absolute bottom-0 right-0 p-5 bg-gradient-to-t from-black to-transparent">
                                 <span
@@ -392,7 +392,7 @@
                     <div class="item group relative rounded-10 overflow-hidden">
                         <a href="#">
                             <img src="images/temp/wide-post1.png" alt="پست اول"
-                                class="duration-200 group-hover:brightness-50">
+                                class="w-full h-auto duration-200 group-hover:brightness-50">
                             <div
                                 class="content w-full absolute bottom-0 right-0 p-5 bg-gradient-to-t from-black to-transparent">
                                 <span
