--- a/index.html
+++ b/index.html
@@ -1088,10 +1088,10 @@
 
                     <!-- tabligh -->
                     <a href="#" target="_blank" rel="nofollow noopener" class="block mb-5" title="تبلیغ">
-                        <img src="images/temp/banner1.jpg" alt="تبلیغ" class="w-full rounded-10" />
+                        <img src="images/temp/banner1.jpg" alt="تبلیغ" class="max-w-full mx-auto rounded-10" />
                     </a>
                     <a href="#" target="_blank" rel="nofollow noopener" class="block mb-5" title="تبلیغ">
-                        <img src="images/temp/banner2.jpg" alt="تبلیغ" class="w-full rounded-10" />
+                        <img src="images/temp/banner2.jpg" alt="تبلیغ" class="max-w-full mx-auto rounded-10" />
                     </a>
                     <!-- tabligh -->
 
@@ -1104,11 +1104,11 @@
                         <ul class="m-0 p-0 list-none">
 
                             <li class="group py-5 px-3 flex border-b border-gray4 last:border-0">
-                                <a href="#" class="w-3/12">
+                                <a href="#" class="w-3/12 md:w-2/12 lg:w-4/12 xl:3/12">
                                     <img src="images/temp/circle-post.png" alt="پست اول"
                                         class="w-16 h-16 rounded-full duration-200 group-hover:brightness-50" />
                                 </a>
-                                <div class="content w-9/12">
+                                <div class="content w-9/12 md:w-10/12 lg:w-9/12">
                                     <a href="#" title=" و ضامن  و ضامن">
                                         <h3
                                             class="line-clamp-3 text-black text-sm duration-200 group-hover:text-secondary">
@@ -1123,11 +1123,11 @@
                                 </div>
                             </li>
                             <li class="group py-5 px-3 flex border-b border-gray4 last:border-0">
-                                <a href="#" class="w-3/12">
+                                <a href="#" class="w-3/12 md:w-2/12 lg:w-4/12 xl:3/12">
                                     <img src="images/temp/circle-post.png" alt="پست اول"
                                         class="w-16 h-16 rounded-full duration-200 group-hover:brightness-50" />
                                 </a>
-                                <div class="content w-9/12">
+                                <div class="content w-9/12 md:w-10/12 lg:w-9/12">
                                     <a href="#" title=" و ضامن  و ضامن">
                                         <h3
                                             class="line-clamp-3 text-black text-sm duration-200 group-hover:text-secondary">
@@ -1142,11 +1142,11 @@
                                 </div>
                             </li>
                             <li class="group py-5 px-3 flex border-b border-gray4 last:border-0">
-                                <a href="#" class="w-3/12">
+                                <a href="#" class="w-3/12 md:w-2/12 lg:w-4/12 xl:3/12">
                                     <img src="images/temp/circle-post.png" alt="پست اول"
                                         class="w-16 h-16 rounded-full duration-200 group-hover:brightness-50" />
                                 </a>
-                                <div class="content w-9/12">
+                                <div class="content w-9/12 md:w-10/12 lg:w-9/12">
                                     <a href="#" title=" و ضامن  و ضامن">
                                         <h3
                                             class="line-clamp-3 text-black text-sm duration-200 group-hover:text-secondary">
