--- a/single.html
+++ b/single.html
@@ -273,29 +273,29 @@
         <div class="container">
             <div class="w-full flex flex-col lg:flex-row gap-5">
 
-                <div class="w-full md:w-8/12 lg:w-9/12">
+                <div class="w-full lg:w-9/12">
 
                     <div
                         class="w-full bg-white rounded-10 flex flex-col md:flex-row gap-3 md:gap-0 items-center justify-between border border-light3 p-5 mb-6">
                         <div class="flex flex-col md:flex-row items-center justify-center md:justify-start gap-3">
                             <div class="flex gap-3">
                                 <a href="#" class="flex">
-                                    <span class="text-green2 text-xs md:text-sm py-1 md:py-2 px-2 md:px-4 rounded-10 bg-lightGreen">وام
+                                    <span class="text-green2 text-xs lg:text-sm py-1 lg:py-2 px-2 lg:px-4 rounded-10 bg-lightGreen">وام
                                         بانکی</span>
                                 </a>
                                 <a href="#" class="flex">
-                                    <span class="text-green2 text-xs md:text-sm py-1 md:py-2 px-2 md:px-4 rounded-10 bg-lightGreen">
+                                    <span class="text-green2 text-xs lg:text-sm py-1 lg:py-2 px-2 lg:px-4 rounded-10 bg-lightGreen">
                                         محبوب ترین ها
                                     </span>
                                 </a>
                             </div>
-                            <div class="text-sm text-gray3">
+                            <div class="text-xs lg:text-sm text-gray3">
                                 <span>تاریخ انتشار: ۲۰ تیر ۱۴۰۲</span>
                                 <span class="px-1">-</span>
                                 <span>مطالعه: ۴ دقیقه</span>
                             </div>
                         </div>
-                        <ul class="list-none flex items-center justify-end gap-5">
+                        <ul class="list-none flex items-center justify-end gap-3 lg:gap-5">
                             <li>
                                 <a href="#" class="flex"><i class="icon-gray-whatsapp w-6 h-6"></i></a>
                             </li>
@@ -378,9 +378,9 @@
 
                     <div class="w-full flex items-center justify-between py-5 border-b border-gray1">
                         <div class="flex items-center gap-2">
-                            <span class="text-gray3 text-xs md:text-sm">برچسب ها: </span>
+                            <span class="text-gray3 text-xs lg:text-sm">برچسب ها: </span>
                             <a href="#">
-                                <span class="text-green2 text-xs md:text-sm py-1 md:py-2 px-2 md:px-4 rounded-10 bg-lightGreen">وام
+                                <span class="text-green2 text-xs lg:text-sm py-1 lg:py-2 px-2 lg:px-4 rounded-10 bg-lightGreen">وام
                                     بدون ضامن</span>
                             </a>
                         </div>
@@ -392,7 +392,7 @@
 
                     <div id="related-posts" class="py-6">
                         <p class="text-base text-black font-extra py-3">مطالب مرتبط</p>
-                        <div class="w-full flex flex-col lg:flex-row gap-5">
+                        <div class="w-full flex flex-col md:flex-row gap-5">
 
                             <div class="w-full md:w-1/2">
                                 <div class="item group relative rounded-10 overflow-hidden">
@@ -464,10 +464,10 @@
 
                 </div>
 
-                <div class="w-full md:w-4/12 lg:w-3/12">
+                <div class="w-full lg:w-3/12">
 
                     <a href="#" target="_blank" rel="nofollow noopener" class="block mb-5" title="تبلیغ">
-                        <img src="images/temp/banner1.jpg" alt="تبلیغ" class="w-full rounded-10" />
+                        <img src="images/temp/banner1.jpg" alt="تبلیغ" class="max-w-full mx-auto rounded-10" />
                     </a>
                     <div class="sticky top-3 mb-3">
                         <div class="main-title pt-9 lg:pt-6 pb-3 w-full flex items-center">
@@ -478,11 +478,11 @@
                             <ul class="m-0 p-0 list-none">
 
                                 <li class="group py-5 px-3 flex border-b border-gray4 last:border-0">
-                                    <a href="#" class="w-3/12">
+                                    <a href="#" class="w-3/12 md:w-2/12 lg:w-4/12 xl:3/12">
                                         <img src="images/temp/circle-post.png" alt="پست اول"
                                             class="w-16 h-16 rounded-full duration-200 group-hover:brightness-50" />
                                     </a>
-                                    <div class="content w-9/12">
+                                    <div class="content w-9/12 md:w-10/12 lg:w-9/12">
                                         <a href="#" title=" و ضامن  و ضامن">
                                             <h3
                                                 class="line-clamp-3 text-black text-sm duration-200 group-hover:text-secondary">
@@ -498,11 +498,11 @@
                                     </div>
                                 </li>
                                 <li class="group py-5 px-3 flex border-b border-gray4 last:border-0">
-                                    <a href="#" class="w-3/12">
+                                    <a href="#" class="w-3/12 md:w-2/12 lg:w-4/12 xl:3/12">
                                         <img src="images/temp/circle-post.png" alt="پست اول"
                                             class="w-16 h-16 rounded-full duration-200 group-hover:brightness-50" />
                                     </a>
-                                    <div class="content w-9/12">
+                                    <div class="content w-9/12 md:w-10/12 lg:w-9/12">
                                         <a href="#" title=" و ضامن  و ضامن">
                                             <h3
                                                 class="line-clamp-3 text-black text-sm duration-200 group-hover:text-secondary">
@@ -518,11 +518,11 @@
                                     </div>
                                 </li>
                                 <li class="group py-5 px-3 flex border-b border-gray4 last:border-0">
-                                    <a href="#" class="w-3/12">
+                                    <a href="#" class="w-3/12 md:w-2/12 lg:w-4/12 xl:3/12">
                                         <img src="images/temp/circle-post.png" alt="پست اول"
                                             class="w-16 h-16 rounded-full duration-200 group-hover:brightness-50" />
                                     </a>
-                                    <div class="content w-9/12">
+                                    <div class="content w-9/12 md:w-10/12 lg:w-9/12">
                                         <a href="#" title=" و ضامن  و ضامن">
                                             <h3
                                                 class="line-clamp-3 text-black text-sm duration-200 group-hover:text-secondary">
